
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int SOCK ;
typedef int PACK ;


 int Win32CnStatusPrinter (int *,int *) ;

void CnStatusPrinter(SOCK *s, PACK *p)
{

 if (s == ((void*)0) || p == ((void*)0))
 {
  return;
 }




}
